# sandbox

./: .gitignore  pyproject.toml
application_with_dart_gui/sample_gui/: README.md  pubspec.yaml  server.py
application_with_dart_gui/sample_gui/android/app/: build.gradle
application_with_dart_gui/sample_gui/ios/Runner/: Info.plist
application_with_dart_gui/sample_gui/ios/Runner.xcodeproj/: project.pbxproj
application_with_dart_gui/sample_gui/linux/: CMakeLists.txt  my_application.cc
application_with_dart_gui/sample_gui/macos/Runner.xcodeproj/: project.pbxproj
application_with_dart_gui/sample_gui/test/: widget_test.dart
application_with_dart_gui/sample_gui/web/: index.html  manifest.json
application_with_dart_gui/sample_gui/windows/: CMakeLists.txt
application_with_dart_gui/sample_gui/windows/runner/: Runner.rc  main.cpp
dash_cheetsheet/: __main__.py
dash_cheetsheet/assets/: style.css
dask_practice/: __main__.py  fem.py  history.py  logger.py  optimizer.py  parameter.py
model_from_optuna_botorch/: fit-model.pkl  study.pkl  tests.py
my_optuna_study/: 4339.db  5646.db  5707.db  __main__.py  core.py
optuna_with_constraints/: __main__.py  botorch_sampler_with_parameter_constraints.py  helper.py  main.py  sandbox.py
optuna_with_constraints/patch_existing_module/: __main__.py  existing_module.py
set_message_depends_on_locale/: README.md  tests.py
set_message_depends_on_locale/message/: 1. make_pot.bat  2. make_mo.bat  __init__.py  babel.cfg  messages.py
set_message_depends_on_locale/message/locales/: messages.pot
(+6 files in other folders)
