[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["ScatterTemple <scatterlearning@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
optuna = "^3.6.1"
botorch = "^0.11.1"
plotly = "^5.22.0"
dash = "^2.17.1"
dash-bootstrap-components = "^1.6.0"
dash-bootstrap-templates = "^1.2.0"
scipy = "^1.14.0"
pandas = "^2.2.2"
babel = "^2.15.0"
optuna-integration = "^3.6.0"
numpy = "^1.26.2"
fastapi = {extras = ["all"], version = "^0.111.1"}
black = "^24.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
